...
            android:id="@+id/nameInputLayout"
            style="@style/Widget.TextInputLayout"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/input_width"
            android:layout_marginTop="20dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_name"
                style="@style/Widget.TextEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>
...
