...
        android:src="@drawable/ic_delete_black_24dp"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/resolve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:src="@drawable/ic_cloud_download_black_24dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
...
        android:src="@drawable/ic_cloud_upload_black_24dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"/>

    <ImageView
        android:id="@+id/takePhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/take_photo"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/take_photo" />
...
